adicionado os conteudos e os gifs de cada tipo de energia

--- a/content/conteudo-eolica.html
+++ b/content/conteudo-eolica.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+
 <body>
 
   <div class="container-lg mt-5 mb-5">
-    <h2><b>Eolica</b></h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
+    <h2><b>Eólica</b></h2>
+    <div class="content-top">
+      <p>A energia eólica, também conhecida como a energia dos ventos, é a energia cinética (forma de energia que um
+        corpo possui em razão de seu movimento, em outras palavras, é a forma de energia associada à velocidade
+        de um corpo, nesse caso os aerogeradores) contida no volume do ar/vento, que tem
+        possibilidade de ser aproveitada e utilizada na geração de energia elétrica, por meio da indução eletromagnética
+        (fenômeno relacionado ao surgimento de uma corrente elétrica em um condutor imerso em um campo magnético,
+        quando ocorre variação do fluxo que o atravessa.), e
+        para trabalhos mecânicos como bombeamento de água e trituração de grãos. O processo para aproveitamento da
+        energia eólica depende dos aerogeradores, que são os equipamentos utilizados para, a partir do contato com o
+        vento, rotacionarem e gerarem outras formas de energia.
+      </p>
+      <img src="../gifs/eolica1.gif">
+    </div>
+
+    <div>
+      <h2><b>Características:</b></h2>
+      <ul>
+        <li>Provido da força dos ventos;</li>
+        <li>É uma energia renovável, sustentável e limpa;</li>
+        <li><b>Sistema isolado:</b> sistemas que se encontram privados de energia elétrica proveniente da rede pública,
+          sendo utilizados para abastecer certas regiões;
+        </li>
+        <li><b>Sistema híbrido:</b> sistemas que produzem energia elétrica de forma simultânea com mais de uma fonte,
+          nomeadamente painéis fotovoltaicos ou turbinas eólicas;
+        </li>
+        <li><b>Sistema interligado à rede:</b> sistemas que inserem a energia produzida por eles mesmos na rede elétrica
+          pública;
+        </li>
+      </ul>
+      <br>
+
+      <h2><b>Como funciona:</b></h2>
+
+      <p>Em resumo, o ar movimenta as pás (hélices da turbina) fazendo o aerogerador rotacionar e transformar esse movimento rotação em energia
+        elétrica que é utilizada para abastecer determinadas regiões.
+      </p>
+
+      <h2><b>Vantagens e desvantagens:</b></h2>
+
+      <p>Devido essa energia ser renovável, sustentável e limpa, ela não emite gases poluentes que contribuem para o aquecimento global e nem gera resíduos no
+        meio ambiente, além de possuir um custo baixo de construção e manutenção. Contudo, a instalação da energia eólica ocasiona na modificação da paisagem, tendo um impacto
+        visual significativo, além de produzir poluição sonora e afetar a migração das aves.
+      </p>
+    </div>
   </div>
 
   <div class="container-md">
@@ -25,7 +69,9 @@
       </div>
 
       <div class="quiz-question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis exercitationem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas
+        asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis
+        exercitationem repellendus?
       </div>
 
       <div class="quiz-alternatives">
@@ -54,4 +100,5 @@
 
   <script src="./script/quiz.js"></script>
 </body>
+
 </html>
