--- a/content/conteudo-hidraulica.html
+++ b/content/conteudo-hidraulica.html
@@ -1,23 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+
 <body>
 
   <div class="container-lg mt-5 mb-5">
-    <h2><b>Hidraulica</b></h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
+    <h1><b>Hidráulica</b></h1>
+    <div class="content-top">
+      <p>A energia hidráulica é produzida através da força do movimento das águas, rios e oceanos, essas águas passam
+        pelas tubulações da usina com bastante força e rapidez, e é isto que faz as pás das turbinas se movimentarem e
+        produzirem energia elétrica. É uma fonte de energia renovável e limpa que se apresenta como alternativa aos
+        combustíveis fósseis. A energia hidráulica é a principal fonte
+        energética do Brasil, sendo cerca de 90% da energia elétrica do território nacional advém das usinas
+        hidrelétricas, deixando apenas 10% para usinas termelétricas e nucleares.
+      </p>
+      <img src="../gifs/hidraulica2.gif">
+    </div>
+
+    <div>
+      <h2><b>Características:</b></h2>
+      <ul>
+        <li>Energia proveniente dos movimentos das águas dos rios e/ou oceanos;</li>
+        <li>É uma energia renovável, sustentável e limpa;</li>
+        <li>Depois da usina hidrelétrica ser instalada ela não tem impacto no meio ambiente;</li>
+        <li>Apesar do custo da construção de uma hidréletrica ser alta, ela possui uma grande durabilidade, desta forma, após serem
+          pagos os custos, a energia hídrica se torna uma fonte relativamente barata de eletricidade;</li>
+      </ul>
+      <br>
+
+      <h2><b>Como funciona:</b></h2>
+
+      <p>A geração hidráulica funciona transformando a energia potencial (a energia presente nos corpos dando a eles a
+        capacidade de realizar trabalho, ou seja, capacidade de realizar alguma ação) que são armazenadas a uma
+        determinada altura acima do nível do mar e podendo ser aproveitada por um desnível, em energia mecânica (a energia mecânica é a energia produzida pelo trabalho de um corpo, ou seja, pela ação realizada desse corpo) 
+        com uma turbina hidráulica. Por sua vez, a energia mecânica obtida pela turbina por rotação através de um eixo, 
+        aciona um gerador de energia elétrica na casa de força, que converte esta energia em eletricidade por meio de indução eletromagnética que gera a corrente alternada. 
+        Do gerador, as linhas de transmissão levam a eletricidade até o transformador que vai alterar a voltagem e enviar a energia para os sistemas de transmissão e distribuição de eletricidade.
+
+      </p>
+
+      <h2><b>Vantagens e desvantagens:</b></h2>
+
+      <p>É uma energia renovável, sustentável e limpa, mas em contrapartida as desvantagens são a realocação da população local, as mudanças climáticas e no regime das chuvas, 
+        alteração do curso e do nível dos rios, prejudicando a vida aquática e o próprio custo de construção. 
+      </p>
+
+    </div>
   </div>
 
   <div class="container-md">
     <div class="quiz">
       <div class="quiz-question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis exercitationem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas
+        asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis
+        exercitationem repellendus?
       </div>
 
       <div class="quiz-alternatives">
@@ -40,10 +82,11 @@
           <label class="quiz-alternative-button">D</label>
           <span>Resposta D</span>
         </div>
-        
+
       </div>
     </div>
   </div>
 
 </body>
+
 </html>
