--- a/content/conteudo-maremotriz.html
+++ b/content/conteudo-maremotriz.html
@@ -1,23 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+
 <body>
 
   <div class="container-lg mt-5 mb-5">
     <h2><b>Maremotriz</b></h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas impedit eveniet nisi, excepturi quod laboriosam quis veritatis inventore optio iste cumque voluptate praesentium, perferendis at quos blanditiis, sint velit asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quos eum voluptate porro voluptatibus odit accusamus earum, impedit exercitationem ea vitae deleniti iusto, similique quaerat. Labore ducimus quis deleniti corporis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum a tenetur, error dolore sequi ad porro illo iste quidem fugit, laboriosam, cupiditate amet totam. Neque facere cupiditate harum totam debitis?</p>
+    <div class="content-top">
+      <p>A energia das marés, também chamada de energia maremotriz, é obtida por meio do aproveitamento da energia
+        potencial (a energia presente nos corpos dando a eles a
+        capacidade de realizar trabalho, ou seja, capacidade de realizar alguma ação)
+        proveniente do desnível das marés ou também pela energia cinética (forma de energia que um
+        corpo possui em razão de seu movimento) das correntes marítimas. Para que essa energia seja revertida em
+        eletricidade é necessária a
+        construção de barragens, eclusas (possibilitando a entrada e saída de água) e unidades geradoras de energia.
+      </p>
+      
+      <img src="../gifs/maremotriz1.gif">
+    </div>
+    <div>
+      <h2><b>Características:</b></h2>
+      <ul>
+        <li>Energia proveniente das altas e baixas das marés, e das correntes do mar;</li>
+        <li>É uma energia renovável, sustentável e limpa;</li>
+        <li>Depois da usina hidrelétrica ser instalada ela não tem impacto no meio ambiente;</li>
+        <li>Nenhum impacto ambiental é gerado durante sua produção e aproveitamento.</li>
+      </ul>
+      <br>
+
+      <h2><b>Como funciona:</b></h2>
+
+      <p>
+        O método mais habitual de aproveitamento da energia potencial das marés é através do uso de turbinas instaladas
+        em
+        barragens, construídas em estuários (ambiente aquático de transição entre um rio e o mar). O processo é
+        semelhante ao utilizado na energia hidráulica das usinas hidrelétricas. O reservatório,
+        a barragem, as comportas e os equipamentos eletromecânicos são as principais partes de uma usina
+        maremotriz. O aproveitamento da energia pode ser feito durante a maré alta e durante a maré baixa. No decorrer
+        da maré alta, a água entra no reservatório, passando pela turbina hidráulica e gerando energia elétrica. Durante
+        a maré baixa, a água sai do reservatório, passando mais uma vez pela turbina e gerando energia elétrica.
+        Denomina-se geração
+        de efeito simples quando o sistema opera apenas durante a maré alta ou maré baixa, quando as duas formas
+        são utilizadas denomina-se geração de efeito duplo.
+      </p>
+
+      <h2><b>Vantagens e desvantagens:</b></h2>
+
+      <p>É uma energia renovável, sustentável e limpa, mas por outro lado o custo inicial para a construção de uma
+        usina é bastante elevado e esta energia só pode ser produzida em locais específicos, com condições geográficas
+        favoráveis para a criação das barreiras para represar a água e com ocorrência de marés de grandes amplitudes, a geração de energia é
+        descontínuo, pois ocorre conforme o ciclo natural das marés.
+      </p>
+    </div>
   </div>
 
   <div class="container-md">
     <div class="quiz">
       <div class="quiz-question">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis exercitationem repellendus?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas
+        asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis
+        exercitationem repellendus?
       </div>
 
       <div class="quiz-alternatives">
@@ -40,10 +88,11 @@
           <label class="quiz-alternative-button">D</label>
           <span>Resposta D</span>
         </div>
-        
+
       </div>
     </div>
   </div>
 
 </body>
+
 </html>
