feat(quiz): added quiz structure and validation along with solar content questions

--- a/content/conteudo-eolica.html
+++ b/content/conteudo-eolica.html
@@ -68,7 +68,7 @@
         <div onclick="selectQuizOption(5)" id="question5" class="quiz-select-question-option">5</div>
       </div>
 
-      <div class="quiz-question">
+      <div id="quiz-current-question" class="quiz-question">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas
         asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis
         exercitationem repellendus?
