refactor(quiz): added quiz structure into the content pages that were missing

--- a/content/conteudo-solar.html
+++ b/content/conteudo-solar.html
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <script src="../script/quiz.js" defer></script>
+  <script src="../script/quiz.js"></script>
 
 </body>
 
