--- a/content/conteudo-hidraulica.html
+++ b/content/conteudo-hidraulica.html
@@ -56,7 +56,14 @@
 
   <div class="container-md">
     <div class="quiz">
-      <div class="quiz-question">
+      <div class="quiz-select">
+        <div id="question1" class="quiz-select-question-option">1</div>
+        <div id="question2" class="quiz-select-question-option">2</div>
+        <div id="question3" class="quiz-select-question-option">3</div>
+        <div id="question4" class="quiz-select-question-option">4</div>
+      </div>
+
+      <div id="quiz-current-question" class="quiz-question">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus maiores iure molestiae quis voluptas
         asperiores quisquam tempora mollitia quibusdam amet obcaecati sit soluta ea perferendis, quos temporibus omnis
         exercitationem repellendus?
@@ -64,28 +71,29 @@
 
       <div class="quiz-alternatives">
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">A</label>
-          <span>Resposta A</span>
+          <label onclick="selectQuizAlternative(1)" id="alternativeButton1" class="quiz-alternative-button">A</label>
+          <span id="alternative1">Resposta A</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">B</label>
-          <span>Resposta B</span>
+          <label onclick="selectQuizAlternative(2)" id="alternativeButton2" class="quiz-alternative-button">B</label>
+          <span id="alternative2">Resposta B</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">C</label>
-          <span>Resposta C</span>
+          <label onclick="selectQuizAlternative(3)" id="alternativeButton3" class="quiz-alternative-button">C</label>
+          <span id="alternative3">Resposta C</span>
         </div>
 
         <div class="quiz-alternatives-answer">
-          <label class="quiz-alternative-button">D</label>
-          <span>Resposta D</span>
+          <label onclick="selectQuizAlternative(4)" id="alternativeButton4" class="quiz-alternative-button">D</label>
+          <span id="alternative4">Resposta D</span>
         </div>
-
       </div>
     </div>
   </div>
+
+  <script src="../script/quiz.js"></script>
 
 </body>
 
