feat(quiz): added a toast notification when answering a question

--- a/footer.html
+++ b/footer.html
@@ -80,5 +80,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="../script/sweetalert2.all.min.js"></script>
 </body>
 </html>
