corrigido as questoes de maremotriz, corrigido o conteudo de maremotriz e hidraulica

--- a/content/conteudo-hidraulica.html
+++ b/content/conteudo-hidraulica.html
@@ -17,7 +17,7 @@
         pelas tubulações da usina com bastante força e rapidez, e é isto que faz as pás das turbinas se movimentarem e
         produzirem energia elétrica. É uma fonte de energia renovável e limpa que se apresenta como alternativa aos
         combustíveis fósseis. A energia hidráulica é a principal fonte
-        energética do Brasil, sendo cerca de 90% da energia elétrica do território nacional advém das usinas
+        energética do Brasil, sendo cerca de 90% da energia elétrica do território nacional que advém das usinas
         hidrelétricas, deixando apenas 10% para usinas termelétricas e nucleares.
       </p>
       <img src="../gifs/hidraulica2.gif">
