--- a/content/conteudo-maremotriz.html
+++ b/content/conteudo-maremotriz.html
@@ -27,10 +27,9 @@
     <div>
       <h2><b>Características:</b></h2>
       <ul>
-        <li>Energia proveniente das altas e baixas das marés, e das correntes do mar;</li>
+        <li>Energia proveniente das altas e baixas das marés, e das correntes marítimas;</li>
         <li>É uma energia renovável, sustentável e limpa;</li>
-        <li>Depois da usina hidrelétrica ser instalada ela não tem impacto no meio ambiente;</li>
-        <li>Nenhum impacto ambiental é gerado durante sua produção e aproveitamento.</li>
+        <li>Não possui um impacto tão grande no meio ambiente para a sua construção em relação as usinas hidrelétricas.</li>
       </ul>
       <br>
 
