--- a/maremotriz.html
+++ b/maremotriz.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <script>
-        window.location.replace('http://127.0.0.1:5500/conteudo.html')
+        window.location.replace('https://leonardodimarchi.github.io/renewstudy/conteudo.html')
 
         localStorage.setItem('paginaAtual','maremotriz');
     </script>
