fix(content): fixing some paths

--- a/content/conteudo-eolica.html
+++ b/content/conteudo-eolica.html
@@ -23,7 +23,7 @@
         energia eólica depende dos aerogeradores, que são os equipamentos utilizados para, a partir do contato com o
         vento, rotacionarem e gerarem outras formas de energia.
       </p>
-      <img src="../gifs/eolica1.gif">
+      <img src="./gifs/eolica1.gif">
     </div>
 
     <div>
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-  <script src="../script/quiz.js"></script>
+  <script src="./script/quiz.js"></script>
 
 </body>
 
