--- a/content/conteudo-hidraulica.html
+++ b/content/conteudo-hidraulica.html
@@ -20,7 +20,7 @@
         energética do Brasil, sendo cerca de 90% da energia elétrica do território nacional que advém das usinas
         hidrelétricas, deixando apenas 10% para usinas termelétricas e nucleares.
       </p>
-      <img src="../gifs/hidraulica2.gif">
+      <img src="./gifs/hidraulica2.gif">
     </div>
 
     <div>
@@ -93,7 +93,7 @@
     </div>
   </div>
 
-  <script src="../script/quiz.js"></script>
+  <script src="./script/quiz.js"></script>
 
 </body>
 
