--- a/content/conteudo-maremotriz.html
+++ b/content/conteudo-maremotriz.html
@@ -22,7 +22,7 @@
         construção de barragens, eclusas (possibilitando a entrada e saída de água) e unidades geradoras de energia.
       </p>
       
-      <img src="../gifs/maremotriz1.gif">
+      <img src="./gifs/maremotriz1.gif">
     </div>
     <div>
       <h2><b>Características:</b></h2>
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <script src="../script/quiz.js"></script>
+  <script src="./script/quiz.js"></script>
 </body>
 
 </html>
