--- a/conteudo.html
+++ b/conteudo.html
@@ -7,7 +7,10 @@
 
     <link rel="stylesheet" href="./style/guia.css">
     <link rel="stylesheet" href="./style/conteudo.css">
-    
+
+    <!--ICONE DO SITE-->
+    <link rel="shortcut icon" href="./images/logo.png">
+    <title>Renewstudy</title>
 </head>
 <body>
     <import id="ipt-navbar"></import>
