fix(quiz && content): fixing some more paths

--- a/content/conteudo-solar.html
+++ b/content/conteudo-solar.html
@@ -20,7 +20,7 @@
         energia
         limpa e sem danos à natureza.
       </p>
-      <img src="./gifs/solar1.gif">
+      <img src="gifs/solar1.gif">
     </div>
     <div>
       <h2><b>Características:</b></h2>
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <script src="./script/quiz.js"></script>
+  <script src="script/quiz.js"></script>
 
 </body>
 
