--- a/footer.html
+++ b/footer.html
@@ -81,6 +81,6 @@
         </div>
     </footer>
 
-    <script src="script/sweetalert2.all.min.js"></script>
+    <script src="./script/sweetalert2.all.min.js"></script>
 </body>
 </html>
