--- a/conteudo.html
+++ b/conteudo.html
@@ -11,12 +11,15 @@
     <!--ICONE DO SITE-->
     <link rel="shortcut icon" href="./images/logo.png">
     <title>Renewstudy</title>
+
+    <!--BOOTSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
     <import id="ipt-navbar"></import>
 
     <div class="container-fluid mt-1">            
-        <div id="guia-conteudo" class="row align-items-center justify-content-between text-center top-range-solar">
+        <div id="guia-conteudo" class="row align-items-center justify-content-between text-center top-range-solar fade-in">
             <div class="col">
                 <a onclick="goBackward()" class="text-decoration-none guia-conteudo-btn">
                     <i class="fas fa-angle-double-left"></i>
@@ -37,7 +40,7 @@
         </div>
     </div>
 
-    <div class="conteudo">
+    <div class="conteudo fade-in">
         <import id="ipt-conteudo"></import>
     </div>
 
@@ -45,6 +48,9 @@
 
     <!--JQUERY-->
     <script src="./script/jquery-3.6.0.min.js"></script>
+
+    <!--BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 
     <!--IMPORTS-->
     <script src="./script/import.js"></script>
