--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 
     <!--ESTILO-->
     <link rel="stylesheet" href="./style/index.css">
+
+    <!--BOOTSTRAP-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 </head>
 <body>
     <import id="ipt-navbar"></import>
 
-    <div class="d-flex justify-content-center align-items-center loading-container">
-        <img class="loading-icon" src="./images/logo-sem-livro.png"/>
-    </div>
-
-    <div class="content-container mb-5 mt-5 container-xl">
+    <div class="fade-in mb-5 mt-5 container-xl">
         <div class="d-flex justify-content-around container-sm align-items-center home-container">
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <span class="titulo-um">Máterial didático auxiliar para o ensino fundamental</span>
@@ -59,6 +58,9 @@
 
     <!--JQUERY-->
     <script src="./script/jquery-3.6.0.min.js"></script>
+
+    <!--BOOTSTRAP-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 
     <!--IMPORTS-->
     <script src="./script/import.js"></script>
