feat(footer): addedd a animation at the footer

--- a/footer.html
+++ b/footer.html
@@ -66,8 +66,13 @@
                 
             </div>
 
-            <hr class="mb-4">
+        </div>
 
+        <div class="footer-gif">
+            <img src="gifs/jumping_planet_dark.gif">
+        </div>
+
+        <div class="container-xl">
             <div class="row d-flex justify-content-center mt-5">
                 <div class="text-center">
                     <p>Copyright <b>RenewStudy</b> © 2021 | All rights reserved</p>
