refactor(content): adding a interaction to the solar content

--- a/content/conteudo-solar.html
+++ b/content/conteudo-solar.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 
 <body>
@@ -43,6 +42,11 @@
         captando o calor do sol, armazenando-o e convertendo-o em energia solar mecânica e, finalmente, em energia
         elétrica.
       </p>
+
+      <div align="center" class="interaction img-fluid" onclick="toggleInteraction1()">
+        <img id="solar-interaction1" src="images/interactions/solar/interacao_solar1_aberto.png">
+        <p>Clique na imagem =)</p>
+      </div>
 
       <h2><b>Vantagens e desvantagens:</b></h2>
 
@@ -99,6 +103,19 @@
   </div>
 
   <script src="script/quiz.js"></script>
+
+  <!-- Interactions -->
+  <script>
+    const interaction1 = $('#solar-interaction1');
+
+    function toggleInteraction1() {
+      if (interaction1.attr('src') == 'images/interactions/solar/interacao_solar1_aberto.png') {
+        interaction1.attr('src', 'images/interactions/solar/interacao_solar1_fechado.png');
+      } else {
+        interaction1.attr('src', 'images/interactions/solar/interacao_solar1_aberto.png');
+      }
+    }
+  </script>
 
 </body>
 
