fix(content): adding the fluid image class at the solar interaction

--- a/content/conteudo-solar.html
+++ b/content/conteudo-solar.html
@@ -43,8 +43,8 @@
         elétrica.
       </p>
 
-      <div align="center" class="interaction img-fluid" onclick="toggleInteraction1()">
-        <img id="solar-interaction1" src="images/interactions/solar/interacao_solar1_aberto.png">
+      <div align="center" class="interaction" onclick="toggleInteraction1()">
+        <img id="solar-interaction1" class="image-max-width" src="images/interactions/solar/interacao_solar1_aberto.png">
         <p>Clique na imagem =)</p>
       </div>
 
