refactor(content): adding some videos about the energies

--- a/content/conteudo-hidraulica.html
+++ b/content/conteudo-hidraulica.html
@@ -34,6 +34,10 @@
       </ul>
       <br>
 
+      <div class="content-video">
+        <iframe width="894" height="503" src="https://www.youtube.com/embed/pirCqSe8a4E?mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+
       <h2><b>Como funciona:</b></h2>
 
       <p>A geração hidráulica funciona transformando a energia potencial (a energia presente nos corpos dando a eles a
@@ -44,6 +48,10 @@
         Do gerador, as linhas de transmissão levam a eletricidade até o transformador que vai alterar a voltagem e enviar a energia para os sistemas de transmissão e distribuição de eletricidade.
 
       </p>
+
+      <div class="content-video mt-4">
+        <iframe width="894" height="503" src="https://www.youtube.com/embed/iYPMZamqSH4?mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
       <h2><b>Vantagens e desvantagens:</b></h2>
 
