refactor(redirect): adding the correct link

--- a/hidraulica.html
+++ b/hidraulica.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <script>
-        window.location.replace('https://leonardodimarchi.github.io/renewstudy/conteudo.html')
+        window.location.replace('http://renewstudy.com.br/conteudo.html');
 
         localStorage.setItem('paginaAtual','hidraulica');
     </script>
