refactor(redirect): adding some more links

--- a/hidraulica.html
+++ b/hidraulica.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <script>
-        window.location.replace('http://renewstudy.com.br/conteudo.html');
+        window.location.replace('https://renewstudy.com.br/conteudo.html');
 
         localStorage.setItem('paginaAtual','hidraulica');
     </script>
