--- a/navbar.html
+++ b/navbar.html
@@ -23,7 +23,7 @@
 <body>
     <header class="container-xl">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand titulo-logo" href="./index.html">
+            <a class="navbar-brand titulo-logo" href="./home">
                 <img class="mr-3" src="./images/logo.png" alt="logo">
                 RenewStudy
             </a>
