refactor(redirect): adding some more links

--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
                     <hr class="mb-4">
 
                     <a href="mailto:contato@renewstudy.com.br?Subject=Contato%20com%20RenewStudy"" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-paper-plane mr-2" style="color: #705E78;"></i>contato@renewstudy.com.br</p></a>
-                    <a href="./index.html" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-home mr-2" style="color: #705E78;"></i>Página inicial</p></a>
+                    <a href="./home" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-home mr-2" style="color: #705E78;"></i>Página inicial</p></a>
                     <a href="./sobre.html" class="text-decoration-none"><p class="footer-hover mb-5"><i class="footer-i fas fa-address-card mr-2" style="color: #705E78;"></i>Sobre nós</p></a>
                 </div>
 
